# nested-hilbert-invariants-polynomials

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
notebooks/: example.ipynb
src/nested_hilb_invariants/: __init__.py  conjectures.py
src/nested_hilbert_invariants/: __init__.py  virtual_characters.py
tests/: tests.py
