[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nested-hilbert-invariants"
version = "0.1.0"
authors = [
  { name="Nadir Fasola", email="nadir.fasola@gmail.com" },
]
description = "A package for verifying conjectures on virtual invariants of nested Hilbert schemes."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/NadirFasola/nested-hilbert-invariants-polynomials"
